# ai-code-context-helper

./: .gitignore  CHANGELOG.md  README.md  README_en.md  README_zh.md  pyproject.toml
.github/workflows/: build-and-release.yml
ai_code_context_helper/: __init__.py  clipboard_operations.py  code_context_generator.py  config.py  dialogs.py  file_utils.py  gui_components.py  languages.py  run.py  settings_manager.py  tooltip.py  tree_operations.py
ai_code_context_helper/resources/: default_settings.json
scripts/: build_exe_poetry.bat
